--- a/trunk/pom.xml
+++ b/trunk/pom.xml
@@ -100,7 +100,7 @@
         </dependency>
         <dependency>
             <groupId>org.springframework</groupId>
-            <artifactId>spring-orm</artifactId>
+            <artifactId>spring-tx</artifactId>
             <version>${spring.version}</version>
             <optional>true</optional>
         </dependency>
