Some more pom refactoring

--- a/pom.xml
+++ b/pom.xml
@@ -34,7 +34,7 @@
     <dependencies>
         <dependency>
             <groupId>org.springframework</groupId>
-            <artifactId>spring-context-support</artifactId>
+            <artifactId>spring-context</artifactId>
             <version>${spring.version}</version>
             <exclusions>
                 <exclusion>
