--- a/pom.xml
+++ b/pom.xml
@@ -158,7 +158,34 @@
                     <encoding>UTF-8</encoding>
                 </configuration>
             </plugin>
+            <plugin>
+                <artifactId>maven-release-plugin</artifactId>
+            </plugin>
         </plugins>
+        <extensions>
+            <extension>
+                <groupId>org.jvnet.wagon-svn</groupId>
+                <artifactId>wagon-svn</artifactId>
+                <version>1.9</version>
+            </extension>
+        </extensions>
     </build>
 
+    <!-- deploy and release configuration -->
+
+    <distributionManagement>
+        <snapshotRepository>
+            <id>googleCode</id>
+            <url>svn:https://cqrs4j.googlecode.com/svn/repo/</url>
+            <uniqueVersion>false</uniqueVersion>
+        </snapshotRepository>
+        <repository>
+            <id>googleCode</id>
+            <url>svn:https://cqrs4j.googlecode.com/svn/repo/</url>
+            <uniqueVersion>false</uniqueVersion>
+        </repository>
+    </distributionManagement>
+    <scm>
+        <url>svn:https://cqrs4j.googlecode.com/svn/trunk</url>
+    </scm>
 </project>
