--- a/pom.xml
+++ b/pom.xml
@@ -15,13 +15,11 @@
   ~ limitations under the License.
   -->
 
-<project xmlns="http://maven.apache.org/POM/4.0.0"
-         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
 
     <groupId>nl.gridshore.cqrs4j</groupId>
     <artifactId>cqrs4j</artifactId>
-    <version>0.1-SNAPSHOT</version>
+    <version>0.1</version>
     <packaging>jar</packaging>
 
     <modelVersion>4.0.0</modelVersion>
@@ -186,6 +184,7 @@
         </repository>
     </distributionManagement>
     <scm>
-        <connection>svn:https://cqrs4j.googlecode.com/svn/trunk</connection>
+        <connection>scm:svn:http://cqrs4j.googlecode.com/svn/tags/cqrs4j-0.1</connection>
+        <developerConnection>scm:svn:https://cqrs4j.googlecode.com/svn/tags/cqrs4j-0.1</developerConnection>
     </scm>
 </project>
