--- a/trunk/pom.xml
+++ b/trunk/pom.xml
@@ -19,7 +19,7 @@
 
     <groupId>nl.gridshore.cqrs4j</groupId>
     <artifactId>cqrs4j</artifactId>
-    <version>0.1</version>
+    <version>0.2-SNAPSHOT</version>
     <packaging>jar</packaging>
 
     <modelVersion>4.0.0</modelVersion>
@@ -184,7 +184,7 @@
         </repository>
     </distributionManagement>
     <scm>
-        <connection>scm:svn:http://cqrs4j.googlecode.com/svn/tags/cqrs4j-0.1</connection>
-        <developerConnection>scm:svn:https://cqrs4j.googlecode.com/svn/tags/cqrs4j-0.1</developerConnection>
+        <connection>scm:svn:http://cqrs4j.googlecode.com/svn/trunk</connection>
+        <developerConnection>scm:svn:https://cqrs4j.googlecode.com/svn/trunk</developerConnection>
     </scm>
 </project>
