--- a/trunk/pom.xml
+++ b/trunk/pom.xml
@@ -25,6 +25,13 @@
 
     <modelVersion>4.0.0</modelVersion>
 
+    <licenses>
+        <license>
+            <name>Apache 2.0</name>
+            <url>http://www.apache.org/licenses/LICENSE-2.0</url>
+        </license>
+    </licenses>
+
     <properties>
         <slf4j.version>1.5.8</slf4j.version>
         <spring.version>3.0.0.RELEASE</spring.version>
