--- a/pom.xml
+++ b/pom.xml
@@ -15,12 +15,11 @@
   ~ limitations under the License.
   -->
 
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
 
     <groupId>nl.gridshore.cqrs4j</groupId>
     <artifactId>cqrs4j</artifactId>
-    <version>0.2-SNAPSHOT</version>
+    <version>0.2</version>
     <packaging>jar</packaging>
 
     <modelVersion>4.0.0</modelVersion>
@@ -192,8 +191,8 @@
         </repository>
     </distributionManagement>
     <scm>
-        <connection>scm:svn:http://cqrs4j.googlecode.com/svn/trunk</connection>
-        <developerConnection>scm:svn:https://cqrs4j.googlecode.com/svn/trunk</developerConnection>
-        <url>http://code.google.com/p/cqrs4j/source/browse/</url>
+        <connection>scm:svn:http://cqrs4j.googlecode.com/svn/tags/cqrs4j-0.2</connection>
+        <developerConnection>scm:svn:https://cqrs4j.googlecode.com/svn/tags/cqrs4j-0.2</developerConnection>
+        <url>http://code.google.com/p/cqrs4j/source/browse/tags/cqrs4j-0.2</url>
     </scm>
 </project>
