--- a/trunk/pom.xml
+++ b/trunk/pom.xml
@@ -155,6 +155,12 @@
 
     <build>
         <plugins>
+			<plugin>
+				<artifactId>maven-resources-plugin</artifactId>
+				<configuration>
+					<encoding>UTF-8</encoding>
+				</configuration>			
+			</plugin>
             <plugin>
                 <artifactId>maven-compiler-plugin</artifactId>
                 <configuration>
