--- a/trunk/pom.xml
+++ b/trunk/pom.xml
@@ -25,6 +25,12 @@
 
     <modelVersion>4.0.0</modelVersion>
 
+    <name>cqrs4j</name>
+    <description>
+        The cqrs4j framework supports developers with the plumbing and wiring required to build a CQRS architecture, by
+        providing (abstract) implementations of common CQRS building blocks.
+    </description>
+
     <licenses>
         <license>
             <name>Apache 2.0</name>
@@ -35,6 +41,7 @@
     <properties>
         <slf4j.version>1.5.8</slf4j.version>
         <spring.version>3.0.0.RELEASE</spring.version>
+        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
     </properties>
 
     <dependencies>
