--- a/core/pom.xml
+++ b/core/pom.xml
@@ -20,12 +20,12 @@
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <parent>
         <groupId>nl.gridshore.cqrs4j</groupId>
-        <artifactId>cqrs4j-parent</artifactId>
+        <artifactId>cqrs4j</artifactId>
         <version>0.3-SNAPSHOT</version>
     </parent>
     <modelVersion>4.0.0</modelVersion>
 
-    <artifactId>cqrs4j</artifactId>
+    <artifactId>cqrs4j-core</artifactId>
 
 
 </project>
